[tool.black]
line-length = 100
skip_string_normalization = true
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | __pycache__
  | build
  | dist
)/
'''

[tool.poetry]
name = "python-webapp"
version = "0.1.0"
description = "Python Web App"
authors = ["pythops <contact@pythops.com>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
backoff = "^2.2.1"
httpx = "^0.25.0"
ujson = "^5.8.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.21" }
asyncpg = "^0.28.0"
alembic = "^1.12.0"
redis = {extras = ["hiredis"], version = "^5.0.1"}

[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"

[tool.poetry.group.test.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
